--- a/progress/input.yaml
+++ b/progress/input.yaml
@@ -13,9 +13,9 @@ name: 'yourname' # no spaces, + can be used instead
 year_start_w: 2007
 year_end_w: 2014
 
-# Inputs for Solar
-year_start_s: 1998    
-year_end_s: 1998
+# Inputs for Solar. Must be between 2022-2024
+year_start_s: 2022
+year_end_s: 2024
 
 # Monte Carlo simulation parameters
 samples: 2
